Fixed navbar overflow

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,6 @@
 .topnav {
   position: fixed;
-  overflow-y: auto;
-  overflow-x: auto;
+  overflow: hidden;
   color: #fffc01;
   background-color: black;
   width: 98.6%;
@@ -42,8 +41,7 @@
 
 .topnav_2 {
   position: fixed;
-  overflow-y: auto;
-  overflow-x: auto;
+  overflow: hidden;
   color: #a20000;
   background-color: #a46f1c;
   width: 98.6%;
